--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,8 @@
-version: '3'
+version: "3"
 services:
-  react-server: 
-    build: 
+  web:
+    build:
       context: .
-      dockerfile: ./Dockerfile.dev
-    ports: 
-      - "3000:3000"
-    volumes: 
-      - .:/app 
-      - /app/node_modules
-  
-  test-service: 
-    build: 
-      context: .
-      dockerfile: ./Dockerfile.dev
-    volumes: 
-      - .:/app 
-      - /app/node_modules
-    command: ["npm", "run", "test"]
+      dockerfile: Dockerfile
+    ports:
+      - "80:80"
