--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,9 +12,10 @@ jobs:
         uses: actions/checkout@v3
       
       - name: Build & Run Docker test
-        run: docker login -u ${{secrets.DOCKER_USERNAME }} -p ${{secrets.DOCKER_PASSWORD}}
-        run: docker build -t peterhungh3/docker-react -f Dockerfile.dev .
-        run: docker run -e CI=true peterhungh3/docker-react npm run test
+        run: |
+          docker login -u ${{secrets.DOCKER_USERNAME }} -p ${{secrets.DOCKER_PASSWORD}}
+          docker build -t peterhungh3/docker-react -f Dockerfile.dev .
+          docker run -e CI=true peterhungh3/docker-react npm run test
 
       - name: Generate deployment package
         run: zip -r deploy.zip . -x '*.git*'
